@@ -1,10 +1,17 @@
 package com.github.winefoxbot.init;
 
+import com.github.winefoxbot.annotation.Plugin;
 import com.github.winefoxbot.annotation.PluginFunction;
 import com.github.winefoxbot.config.HelpDocConfiguration;
 import com.github.winefoxbot.model.dto.helpdoc.HelpData;
 import com.github.winefoxbot.model.dto.helpdoc.HelpDoc;
 import com.github.winefoxbot.model.dto.helpdoc.HelpGroup;
+import com.github.winefoxbot.model.enums.Permission;
+import com.github.winefoxbot.utils.CommandRegexParser;
+import com.mikuac.shiro.annotation.AnyMessageHandler;
+import com.mikuac.shiro.annotation.GroupMessageHandler;
+import com.mikuac.shiro.annotation.MessageHandlerFilter;
+import com.mikuac.shiro.annotation.PrivateMessageHandler;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.aop.support.AopUtils;
@@ -12,6 +19,7 @@ import org.springframework.context.ApplicationContext;
 import org.springframework.context.event.ContextRefreshedEvent;
 import org.springframework.context.event.EventListener;
 import org.springframework.stereotype.Component;
+import org.springframework.util.StringUtils;
 
 import java.lang.reflect.Method;
 import java.util.*;
@@ -23,9 +31,7 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class HelpDocLoader {
 
-    // [修改] 用于存储所有功能文档，按分组名聚合
-    private final Map<String, List<HelpDoc>> groupedDocs = new ConcurrentHashMap<>();
-
+    private final Map<String, HelpGroup> helpGroups = new ConcurrentHashMap<>();
     private final HelpDocConfiguration docConfiguration;
 
     @EventListener(ContextRefreshedEvent.class)
@@ -33,127 +39,138 @@ public class HelpDocLoader {
         log.info("Spring context refreshed. Starting to load help documents...");
         ApplicationContext context = event.getApplicationContext();
 
-        // 1. 清空旧数据
-        groupedDocs.clear();
+        helpGroups.clear();
+        loadGroupsFromConfig();
+        scanForAnnotatedPlugins(context);
 
-        // 2. 从 help-docs.json 加载基础文档
+        log.info("Help documents loading finished. Total {} group(s) loaded.", helpGroups.size());
+    }
+
+    private void loadGroupsFromConfig() {
         HelpData configData = docConfiguration.getHelpData();
         if (configData != null && configData.getGroups() != null) {
             configData.getGroups().forEach(group -> {
-                // 将JSON中定义的每个功能添加到map中
-                group.getDocumentation().forEach(doc -> addDoc(group.getName(), doc));
+                // 确保 documentation 列表是可变的
+                group.setDocumentation(new ArrayList<>(group.getDocumentation() != null ? group.getDocumentation() : Collections.emptyList()));
+                helpGroups.put(group.getName(), group);
             });
-            log.info("Loaded {} group(s) from help-docs.json.", configData.getGroups().size());
+            log.info("Loaded {} group(s) metadata from help-docs.json.", configData.getGroups().size());
         }
-
-        // 3. 从注解和硬编码Bean加载，并合并到现有分组中
-        loadHardcodedBeanDocs(context);
-        scanForAnnotatedFunctions(context);
-
-        log.info("Help documents loading finished. Total {} group(s) after merging.", groupedDocs.size());
     }
 
+    private void scanForAnnotatedPlugins(ApplicationContext context) {
+        Map<String, Object> beansWithAnnotation = context.getBeansWithAnnotation(Plugin.class);
 
-    private void addDoc(String groupName, HelpDoc doc) {
-        groupedDocs.computeIfAbsent(groupName, k -> new ArrayList<>()).add(doc);
-    }
-
-    // [修改] 更新扫描逻辑以调用新的 addDoc
-    private void scanForAnnotatedFunctions(ApplicationContext context) {
-        String[] beanNames = context.getBeanDefinitionNames();
-        for (String beanName : beanNames) {
-            Object bean = context.getBean(beanName);
+        for (Object bean : beansWithAnnotation.values()) {
             Class<?> targetClass = AopUtils.getTargetClass(bean);
+            if (!targetClass.isAnnotationPresent(Plugin.class)) continue;
 
+            Plugin pluginAnnotation = targetClass.getAnnotation(Plugin.class);
+            if (pluginAnnotation.hidden()) continue;
+
+            String groupName = pluginAnnotation.name();
+
+            // 1. 获取或创建 HelpGroup
+            HelpGroup group = helpGroups.computeIfAbsent(groupName, k -> {
+                log.debug("Group '{}' not found in config, creating new one from annotation on class '{}'.", groupName, targetClass.getSimpleName());
+                HelpGroup newGroup = new HelpGroup();
+                newGroup.setName(groupName);
+                newGroup.setDocumentation(new ArrayList<>());
+                return newGroup;
+            });
+
+            // 2. [核心改动] 智能合并元数据
+            mergeGroupMetadata(group, pluginAnnotation, targetClass);
+
+            // 3. 遍历方法，加载功能文档并添加到合并后的Group中
             for (Method method : targetClass.getDeclaredMethods()) {
-                if (method.isAnnotationPresent(PluginFunction.class)) {
-                    PluginFunction annotation = method.getAnnotation(PluginFunction.class);
-                    if (annotation.hidden()) continue;
+                if (method.isAnnotationPresent(PluginFunction.class) && isPresentMessageHandlerAnnotation(method)) {
+                    PluginFunction funcAnnotation = method.getAnnotation(PluginFunction.class);
+                    if (funcAnnotation.hidden()) continue;
 
-                    HelpDoc doc = new HelpDoc(
-                            annotation.group(),
-                            annotation.name(),
-                            annotation.description(),
-                            annotation.permission().getApplicableRolesDescription(),
-                            List.of(annotation.commands())
-                    );
-                    // 使用注解中定义的group名
-                    addDoc(annotation.group(), doc);
+                    HelpDoc helpDoc = new HelpDoc();
+                    helpDoc.setName(funcAnnotation.name());
+                    helpDoc.setDescription(funcAnnotation.description());
+
+                    // 注解的 permission 优先于类的 permission
+                    Permission finalPermission = funcAnnotation.permission() == Permission.USER ?
+                            pluginAnnotation.permission() : funcAnnotation.permission();
+                    helpDoc.setPermission(finalPermission.getApplicableRolesDescription());
+
+                    List<String> commands = new ArrayList<>(Arrays.asList(funcAnnotation.commands()));
+                    if (funcAnnotation.autoGenerateHelp()) {
+                        String cmdRegex = getCmdRegexFromMessageHandlerAnnotation(method);
+                        if (cmdRegex != null) {
+                            commands.addAll(CommandRegexParser.extractCommands(cmdRegex));
+                        }
+                    }
+                    helpDoc.setCommands(commands.stream().distinct().collect(Collectors.toList()));
+
+                    group.getDocumentation().add(helpDoc);
                 }
             }
         }
     }
 
-    // [修改] 更新硬编码Bean的加载逻辑
-    private void loadHardcodedBeanDocs(ApplicationContext context) {
-        // 注意：这种方式需要HelpDoc Bean自身能提供group信息，否则无法分组
-        // 假设HelpDoc DTO没有group字段，此方法可能需要重新设计或废弃
-        // 如果您的HelpDoc DTO仍然有group字段，那么原始逻辑仍然有效
-        // 假设HelpDoc DTO没有group字段，这里注释掉，推荐使用注解或JSON
-        /*
-        Map<String, HelpDoc> helpDocBeans = context.getBeansOfType(HelpDoc.class);
-        if (!helpDocBeans.isEmpty()) {
-            log.warn("Hardcoded HelpDoc beans are found, but cannot be grouped without group info. Please use @PluginFunction or JSON config.");
+    /**
+     * [新增] 智能合并来自 @Plugin 注解的元数据到现有的 HelpGroup 对象中。
+     *
+     * @param existingGroup    已存在的 HelpGroup 对象（可能来自JSON或之前的注解）
+     * @param pluginAnnotation 当前处理的 @Plugin 注解
+     * @param sourceClass      注解所在的类，用于日志记录
+     */
+    private void mergeGroupMetadata(HelpGroup existingGroup, Plugin pluginAnnotation, Class<?> sourceClass) {
+        // 规则1: 对于 order, 如果注解的值更低(优先级更高)，则采纳注解的值
+        // 这同时解决了多个 @Plugin 注解间的冲突
+        if (pluginAnnotation.order() < existingGroup.getOrder()) {
+            log.info("Updating group '{}' order from {} to {} (from class {}).",
+                    existingGroup.getName(), existingGroup.getOrder(), pluginAnnotation.order(), sourceClass.getSimpleName());
+            existingGroup.setOrder(pluginAnnotation.order());
         }
-        */
+
+
+        // 规则2: 对于 iconPath, 如果注解提供了值，并且(现有值为空 或 优先级更高)，则采纳注解的值
+        // 这里的逻辑简化为：如果注解提供了值，就倾向于使用它，除非已有值且优先级更高
+        if (StringUtils.hasText(pluginAnnotation.iconPath())) {
+            if (!StringUtils.hasText(existingGroup.getIcon()) || pluginAnnotation.order() < existingGroup.getOrder()){
+                log.info("Updating group '{}' iconPath to '{}' (from class {}).",
+                        existingGroup.getName(), pluginAnnotation.iconPath(), sourceClass.getSimpleName());
+                existingGroup.setIcon(pluginAnnotation.iconPath());
+            }
+        }
+
+        // 规则3: 对于 description, 逻辑同 iconPath
+        if (StringUtils.hasText(pluginAnnotation.description())) {
+            if (!StringUtils.hasText(existingGroup.getDescription()) || pluginAnnotation.order() < existingGroup.getOrder()){
+                log.info("Updating group '{}' description to '{}' (from class {}).",
+                        existingGroup.getName(), pluginAnnotation.description(), sourceClass.getSimpleName());
+                existingGroup.setDescription(pluginAnnotation.description());
+            }
+        }
     }
 
-    /**
-     * [核心方法] 提供给服务层调用，返回排序和结构化好的数据。
-     * 这个方法现在是关键，它整合了所有数据源，并按照JSON配置进行排序。
-     */
-    public HelpData getSortedHelpData() {
-        HelpData sourceData = docConfiguration.getHelpData();
-        if (sourceData == null) {
-            return new HelpData(); // 返回空对象防止NPE
+
+    private String getCmdRegexFromMessageHandlerAnnotation(Method method) {
+        if (method.isAnnotationPresent(MessageHandlerFilter.class)) {
+            MessageHandlerFilter filter = method.getAnnotation(MessageHandlerFilter.class);
+            return filter.cmd();
         }
+        return null;
+    }
 
-        // 1. 创建一个新的HelpData副本用于返回，避免修改原始配置对象
-        HelpData finalData = new HelpData();
-        finalData.setTopBackground(sourceData.getTopBackground());
-        finalData.setBottomBackground(sourceData.getBottomBackground());
-        finalData.setDefaultIcon(sourceData.getDefaultIcon());
+    private boolean isPresentMessageHandlerAnnotation(Method method) {
+        return method.isAnnotationPresent(AnyMessageHandler.class) ||
+                method.isAnnotationPresent(PrivateMessageHandler.class) ||
+                method.isAnnotationPresent(GroupMessageHandler.class);
+    }
 
-        // 2. 获取JSON中定义的分组顺序和元数据
-        List<HelpGroup> configuredGroups = sourceData.getGroups() != null ? sourceData.getGroups() : new ArrayList<>();
-
-        // 3. 将所有加载的文档（包括注解扫描的）填充到这些分组中
-        List<HelpGroup> resultGroups = configuredGroups.stream()
-                .map(cg -> {
-                    // 创建一个新的HelpGroup实例
-                    HelpGroup newGroup = new HelpGroup();
-                    newGroup.setName(cg.getName());
-                    newGroup.setPriority(cg.getPriority());
-                    newGroup.setIcon(cg.getIcon());
-                    // 从groupedDocs中获取该分组的所有文档
-                    newGroup.setDocumentation(groupedDocs.getOrDefault(cg.getName(), Collections.emptyList()));
-                    return newGroup;
-                })
+    public HelpData getSortedHelpData() {
+        HelpData data = new HelpData();
+        List<HelpGroup> sortedGroups = helpGroups.values().stream()
+                .sorted(Comparator.comparingInt(HelpGroup::getOrder))
                 .collect(Collectors.toList());
 
-        // 4. 处理那些通过注解添加，但在JSON中未定义的分组
-        groupedDocs.keySet().forEach(groupName -> {
-            boolean isConfigured = resultGroups.stream().anyMatch(g -> g.getName().equals(groupName));
-            if (!isConfigured) {
-                log.warn("Group '{}' found via annotation but not configured in help-docs.json. It will be appended to the end.", groupName);
-                HelpGroup newGroup = new HelpGroup();
-                newGroup.setName(groupName);
-                newGroup.setPriority(Integer.MAX_VALUE); // 放在最后
-                newGroup.setIcon(null); // 将使用默认图标
-                newGroup.setDocumentation(groupedDocs.get(groupName));
-                resultGroups.add(newGroup);
-            }
-        });
-
-        // 5. 对最终结果进行排序
-        resultGroups.sort(Comparator.comparingInt(HelpGroup::getPriority));
-
-        finalData.setGroups(resultGroups);
-        return finalData;
-    }
-
-    // [保留] 如果还有地方需要原始的Map，可以保留这个方法
-    public Map<String, List<HelpDoc>> getGroupedDocs() {
-        return Collections.unmodifiableMap(groupedDocs);
+        data.setGroups(sortedGroups);
+        return data;
     }
 }
